--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.10",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.13",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
@@ -30,7 +30,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
