--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap-fileinput": "^5.1.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-handlebars": "^4.0.4",
@@ -15,6 +16,7 @@
     "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
     "moment": "^2.27.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.10",
